# ultra-tournament

./: Cargo.toml  README.md  docs.sh  rustfmt.toml
src/: lib.rs  tournament.rs  types.rs
src/test/: test_docs.rs  test_janken.rs  test_tournament.rs
