[package]
name = "ultra_tournament"
version = "0.1.0"
authors = ["mcpar-land"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Library for running single-elimination tournament brackets."
homepage = "https://github.com/mcpar-land/ultra-tournament"
documentation = "https://docs.rs/ultra-tournament"
repository = "https://github.com/mcpar-land/ultra-tournament"
readme = "README.md"
exclude = [
	"docs.sh",
	".vscode/*"
]


[dependencies]
specs = "0.16.1"
petgraph = { version = "0.4.13", features = [ "serde-1" ] }
serde = { version = "1.0.114", features = ["derive"] }
rand = "0.7"
colored = "2.0"
enum-map = "0.6.2"
enum-map-derive = "0.4.3"
ptree = { version = "0.2.1", features = [ "petgraph" ] }
num-integer = "0.1.43"

[dev-dependencies]
num-format = "0.4.0"